[project]
name = "PANBA-NTT"
version = "1.1.0"
description = "Retiteration from PaloAltoNetworkBulkAutomation"
authors = [
    { name = "Martin Sambulare", email = "martin.sambulare@nttindonesia.com" },
]
requires-python = ">=3.11.6"
classifiers = ["Developers Status :: 3 - Alpha", "Natural Language :: English"]
